Fix hover background for dark mode

--- a/apps/accessibility/css/dark.scss
+++ b/apps/accessibility/css/dark.scss
@@ -2,8 +2,9 @@
 $color-main-text: #d8d8d8;
 $color-main-background: #181818;
 
-$color-background-dark: lighten($color-main-background, 4%);
-$color-background-darker: lighten($color-main-background, 8%);
+$color-background-hover: lighten($color-main-background, 4%);
+$color-background-dark: lighten($color-main-background, 7%);
+$color-background-darker: lighten($color-main-background, 14%);
 
 $color-placeholder-light: lighten($color-main-background, 10%);
 $color-placeholder-dark: lighten($color-main-background, 20%);
